fix typos and links

--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(
 
 ## Key resources
 
-- Docker image: [Docker Hub](https://hub.docker.com/repository/docker/saskiafreytag/)
+- Docker image: [Docker Hub](https://hub.docker.com/repository/docker/saskiafreytag/making_bioconductor_pkg)
 - Workshop material: [pkgdown website](https://saskiafreytag.github.io/making_bioconductor_pkg)
 
 ## Workshop description
@@ -59,13 +59,12 @@ You can then install the packages necessary for this workshop using the followin
 
 ```{r, eval = FALSE}
 library(BiocManager)
-install(c())
+install(c("usethis", "roxygen2", "devtools", "goodpractice", "BiocCheck"))
 ```
 
-Alternatively, you can might like to use Docker to runt he workshop in a container with R, all the necessary packages, and RStudio.
+Alternatively, you can might like to use Docker to run the workshop in a container with R, all the necessary packages, and RStudio.
 This can be done as follows:
 
-- Run `docker run -e PASSWORD=delayedarray -p 8787:8787 -d --rm saskiafreytag/saskiafreytag/making_bioconductor_pkg`. Use `-v $(pwd):/home/rstudio` argument to map your local directory to the container.
-- Log in to RStudio at [http://localhost:8787](http://localhost:8787) using username `rstudio` and password `yourpassword`. Note that on Windows you need to provide your localhost IP address like `http://191.163.92.108:8787/` - find it using `docker-machine ip default` in Docker's terminal.
+- Log in to RStudio at [http://localhost:8787](http://localhost:8787) using username `rstudio` and password `welcome-to-bioc2020`. Note that on Windows you need to provide your localhost IP address like `http://191.163.92.108:8787/` - find it using `docker-machine ip default` in Docker's terminal.
 - Run `browseVignettes(package = "Building a Bioconductor Package")`. Click on one of the links, "HTML", "source", "R code".
     - In case of `The requested page was not found` error, add `help/` to the URL right after the hostname, e.g., [http://localhost:8787/help/library/making_bioconductor_pkg/doc/Building_a_Bioconductor_Packages.html](http://localhost:8787/help/library/making_bioconductor_pkg/doc/Building_a_Bioconductor_Packages.html). This is a [known bug](https://github.com/rocker-org/rocker-versioned/issues/178).
